Set up docker-jekyll for local rendering.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,23 @@
-timezone: America/New_York
+timezone: America/Denver
 encoding: utf-8
 markdown: kramdown
 domain: www.brandtredd.org
-exclude: README.md
+exclude:
+  - README.md
+  - LICENSE
+  - docker-compose.yml
+  - .gitignore
+  - .sass-cache/
+  - .jekyll-cache/
+  - template-bare.html
+  - template-layout.html
+  - template.md
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "default"
+sass:
+  sass_dir: _sass
+  
